<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.fragments.ProfileFragment">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/my_room"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/shape_linear"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/img_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_name"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            />

        <TextView
            android:id="@+id/tv_name_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/img_name"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/name"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_number_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_name_user"
            app:layout_constraintStart_toStartOf="@id/tv_name_user"
            android:text="@string/number"
            android:textSize="10sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/text_gay_color"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="6dp"
            />


        <ImageView
            android:id="@+id/img_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_next"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/const_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/shape_linear"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/img_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_heart"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            />

        <TextView
            android:id="@+id/tv_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/img_heart"
            app:layout_constraintTop_toTopOf="parent"
            android:text="Избранное"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_tovar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_favourite"
            app:layout_constraintStart_toStartOf="@id/tv_favourite"
            android:text="@string/tovar"
            android:textSize="10sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/text_gay_color"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="6dp"
            />


        <ImageView
            android:id="@+id/img_next_small"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="14dp"
            android:src="@drawable/ic_small_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/const_favourite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_linear"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/img_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_shop"
                android:layout_marginStart="12dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                />

            <TextView
                android:id="@+id/tv_shop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shop"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:textSize="14sp"
                android:layout_marginTop="12dp"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_small_next"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"


                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_linear"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sms"
                android:layout_marginStart="12dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sms"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:textSize="14sp"
                android:layout_marginTop="12dp"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_small_next"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"


                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_linear"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_offert"
                android:layout_marginStart="12dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/offert"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:textSize="14sp"
                android:layout_marginTop="12dp"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_small_next"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"


                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_linear"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back1"
                android:layout_marginStart="12dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back_tovar"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:textSize="14sp"
                android:layout_marginTop="12dp"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_small_next"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"


                />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/log_out"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>